--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <div>
         Inventory 2: 
         <a href="/index">Домой</a>
-        <a href="/find_empty_vlan">Показать свободные VID-ы</a>
+        <a href="/">Показать свободные VID-ы</a>
     </div>
 
     <hr>
