--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,9 @@
   </head>
   <body>
     <div>
-        Inventory 2: 
         <a href="/index">Домой</a>
+        <a href="/new_record">Создать новую запись</a>
+        <a href="/generate_config">Сгенерировать конфиги</a>
         <a href="/">Показать свободные VID-ы</a>
     </div>
 
