--- a/templates/generate_config.html
+++ b/templates/generate_config.html
@@ -1,6 +1,37 @@
 {% extends "base.html" %}
 {% block content %}
 
+        <div class="container">
+            <div class="section">
+                <h2>Создать новую запись</h2>
+                <!-- TODO: Create a form for inv -->
+                <form action="/" method="post">
+                <div>
+                    <input name="suz" placeholder="СУЗ-" type="text">
+                </div>
+                <div>
+                    <input name="client" placeholder="КЛИЕНТ" type="text">
+                </div>
+                <div>
+                    <input name="service" placeholder="УСЛУГА" type="text">
+                </div>
+                <div>
+                    <input name="desc" placeholder="DESCRIPTION" type="text">
+                </div>
+                <div>
+                    <input name="pe" placeholder="PE" type="text">
+                </div>
+                <div>
+                    <input name="pe_if" placeholder="PE_IF" type="text">
+                </div>
+                <div>
+                    <input name="vid" placeholder="VID" type="number" min="1" max="4094">
+                </div>
+
+                <input type="submit" value="СОХРАНИТЬ">
+                </form>
+            </div>
+
             <div class="section">
                 <h2>Result</h2>
                 <table>
